<resources>
    <string name="app_name">In2Bliss</string>
    <string name="log_in">Log In</string>
    <string name="think_well_and_feel_better_create_a_blissful_life"><font color="#12046A">Think well and feel better.\nCreate a </font><font color="#0d99ff">Blissful</font><font color="#12046A"> life.</font></string>
    <string name="continue_">Continue</string>
    <string name="explore_the_app_">Explore the app?</string>
    <string name="continue_here">Continue here</string>
    <string name="step_one">Step one</string>
    <string name="tell_us_what_brings_you_here">Tell us what brings you here</string>
    <string name="select_a_category_that_matches_your_needs">Select a category that matches your needs</string>
    <string name="let_s_take_a_moment_to_personalise_your_program_and_elevate_your_experience">Let’s take a moment to personalise your program and elevate your experience</string>
    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
    <string name="step_two">Step two</string>
    <string name="save_your_progress_and_never_lose_track_of_your_journey">Save your progress and never lose track of your journey</string>
    <string name="sign_up_now_to_stay_on_track_and_unlock_exclusive_features">Sign-up now to stay on track and unlock exclusive features.</string>
    <string name="login_now_to_stay_on_track_and_unlock_exclusive_features">Login now to stay on track and unlock exclusive features.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="by_signing_up_you_agree_to_our_terms_of_use_and_privacy_policy">By signing up, you agree to our <font color="#12046A">Terms of use</font> and <font color="#12046A">Privacy Policy</font></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="enter_your_name_and_let_s_begin_your_journey_to_self_discovery">Enter your name and let’s begin your journey to self-discovery!</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="step_three">Step three</string>
    <string name="step_four">Step four</string>
    <string name="add_a_personal_touch_to_your_profile">Add a personal touch to your profile</string>
    <string name="upload_your_profile_picture_to_personalise_your_account">Upload your profile picture to personalise your account.</string>
    <string name="use_camera">Use camera</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="skip">Skip</string>
    <string name="discover_affirmations_for_your_mind_body_and_soul">Discover Affirmations for your Mind, Body and Soul</string>
    <string name="step_five">Step five</string>
    <string name="select_at_least_one_to_continue">Select at-least one to continue.</string>
    <string name="explore_in2bliss">Explore In2Bliss</string>
    <string name="select_all_the_affirmation_categories_you_want_to_recieve_from">Select all the positive affirmation subcategories you want to see.</string>
    <string name="select_all_the_mediation_subcategories_you">Select all the meditation subcategories you want to see.</string>
    <string name="wisdom_inspiration_bottom_subtitle">Select all the wisdom/inspiration subcategories you want to see</string>
    <string name="next">Next</string>
    <string name="start_this_session">Start this session</string>
    <string name="set_your_reminders">Set your reminders</string>
    <string name="time">Time</string>
    <string name="repeat_every">Repeat every</string>
    <string name="how_many">How many</string>
    <string name="start_at">Start at</string>
    <string name="end_at">End at</string>
    <string name="_0r">0r</string>
    <string name="end_session">End Session</string>
    <string name="customise_reminders">Customise reminders</string>
    <string name="for_you">For you</string>
    <string name="explore">Explore</string>
    <string name="journal">Journal</string>
    <string name="Unread">Unread</string>
    <string name="dashboard">Dashboard</string>
    <string name="unread">Unread</string>
    <string name="read">Read</string>
    <string name="history">History</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="become_at_peace">Become at peace</string>
    <string name="last_week">Last Week</string>
    <string name="my_history">My History</string>
    <string name="daily_meditation_average">Daily meditation average</string>
    <string name="your_streaks">Your streaks</string>
    <string name="reset_your_attention">Rest your attention</string>
    <string name="kenny_jones">Kenny Jones</string>
    <string name="self_love">Self-Love</string>
    <string name="downloads">Downloads</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure_you_want_to_delete_this_account">Are you sure you want to delete this account?</string>
    <string name="are_you_sure_you_want_to_delete_this_history">Are you sure you want to delete this history?</string>
    <string name="useremail.com">user@email.com</string>
    <string name="minutes_12">12 mins</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="favourite_description">
        This guided affirmation is designed to help you connect with your...
    </string>
    <string name="my_created_affirmations">My Created Affirmations</string>
    <string name="download_title">My Created Affirmations</string>
    <string name="download_description">A Short Introduction On Techniques Used To Love Yourself Which Helps Is The Affirmation "I Am Deserving Of Happiness And Fulfillment."</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="notification">notification</string>
    <string name="times_a_day">times a day</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="term_and_privacy_description">
        Nunc sagittis mattis sollicitudin. Pellentesque eu fringilla leo. Aliquam congue lectus at sapien sodales fringilla. Maecenas mi dui, egestas sed erat quis, placerat auctor ligula.
    </string>
    <string name="notifications">Notifications</string>
    <string name="about_jess">About Jess</string>
    <string name="about_in2bliss">About In2Bliss </string>
    <string name="pricing_plan">Pricing Plan</string>
    <string name="nunc_sagittie_mattis_sollicitudin_Pallentesque">
        Nunc safittis mattis sollicitudin. Pallentesque
    </string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="courses">Courses</string>
    <string name="free_trial_plan">Free Trial Plan</string>
    <string name="choose_a_subscription_plan_to_unlock_all_the_functionality_of_the_application">Choose a subscription plan to unlock all the functionality of the application
    </string>
    <string name="notification_3_times_a_day">Notification 0 times a day</string>
    <string name="one_hr_ago">1 hr ago...</string>
    <string name="content_containing_1000_words_with_images_that_will_be_hardcoded">Content containing 1000 words with images that will be hardcoded</string>
    <string name="journal_description">Affirmation for Attracting Positive and Fulfilling Relationships.</string>
    <string name="get_started_with">Get started with...</string>
    <string name="step_six">Step six</string>
    <string name="details">Details </string>
    <string name="profile_details">Profile Details</string>
    <string name="how_your_free_trial_works">How your free trial works</string>
    <string name="upgrade_for_exclusive_content_start_your_7_day_free_trial_now"><font color="#3f3a84">Upgrade for exclusive content.</font> <font color="#12046A">Start your 7-day free trial now.</font></string>
    <string name="install_the_app">Install the app</string>
    <string name="you_successfully_created_your_profile">You successfully created your profile.</string>
    <string name="today_get_instant_access">Today: Get Instant Access</string>
    <string name="get_access_to_the_entire_app">Get access to the entire app.</string>
    <string name="day_5_trial_reminder">Day 5: Trial Reminder</string>
    <string name="we_ll_send_you_an_email_notification_cancel_anytime_in_just_15_seconds">We’ll send you an email/notification. Cancel anytime in just 15 seconds.</string>
    <string name="your_subscription_will_start_on_march_21st">Your subscription will start on </string>
    <string name="day_7_trial_ends">Day 7: Trial Ends</string>
    <string name="try_free_for_7_days">Try Free for 7 days</string>
    <string name="_59_99_per_year_5_43_mo"><b>$79.99</b> per year <b>($8.99/mo)</b></string>
    <string name="no_payment_due_now">No payment due now!</string>
    <string name="start_your_free_trial">Start your free trial</string>
    <string name="your_7_day_has_started">Your 7-day free trial\nhas started!</string>
    <string name="you_will_get_notifications_about_when_your_trial_is_about_to_end_and_receive_inspirational_quotes_directly_to_your_phone">You will get notifications when your trial is about to end and receive inspirational quotes directly to your phone</string>
    <string name="remind_me">Remind me</string>
    <string name="maybe_later">Maybe later</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="password_must_be_greater_than_6">Password must be greater than 6</string>
    <string name="minimise">Minimise</string>
    <string name="theme">Theme</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="please_select_country_name">Please select country </string>
    <string name="congratulations_on_7_days_of_meditation">
        Congratulations on 7 days of meditation!
    </string>
    <string name="meditation_tracker">Meditation Tracker</string>
    <string name="start_meditation">Start Meditation</string>
    <string name="edit_affirmation">Edit Affirmation</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="share">Share</string>
    <string name="favourite">Favourite</string>
    <string name="please_select_reason">Please select reason</string>
    <string name="my_affirmations">My Affirmations</string>
    <string name="search_your_library">Search your library</string>
    <string name="delete">Delete</string>
    <string name="max_1000_words">max. 1000 words</string>
    <string name="give_your_affirmation_a_title">Give your affirmation a title</string>
    <string name="this_transcript_will_be_displayed_while_recording_your_voice">This transcript will be displayed while recording your voice</string>
    <string name="discover_positive_affirmation_reminders_for_your_mind_body_and_soul">Discover Positive Affirmation Reminders For Your Mind, Body and Soul</string>
    <string name="select_all_the_affirmation_subcategories_you_wish_to_receive_as_pictures_and_notifications_to_positively_align_your_thoughts_feelings_and_actions">Select all the affirmation subcategories you wish to receive as <b>pictures and notifications</b> to positively align your thoughts, feelings, and actions</string>
</resources>