<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_splash_bg"
        tools:context=".ui.activity.splash.splash_step.SplashStep">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBliss"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/ic_logo_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/white_button_bg"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="@dimen/_36sdp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:id="@+id/btnLogin"
            android:textColor="@color/prime_blue_418FF6"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="@+id/ivBliss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivBliss" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/think_well_and_feel_better_create_a_blissful_life"
            android:textAlignment="center"
            android:textSize="@dimen/_24ssp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/btnContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            style="@style/blue_button_style"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_26sdp"
            android:text="@string/continue_"
            app:layout_constraintBottom_toTopOf="@id/tvExploreHere"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvExploreHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/explore_the_app_"
            android:textColor="@color/dark_purple_12046A"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvContinueHere"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContinueHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/continue_here"
            android:textColor="@color/prime_purple_5F46F4"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/tvExploreHere" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>