<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg"
        tools:context=".ui.activity.splash.stepFive.StepFiveActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStepFive"
            style="@style/text_Style_roboto_medium_pink_color"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/step_five"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDiscoverAffirmationForYourMind"
            style="@style/text_Style_roboto_medium_dark_purple_color"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/discover_positive_affirmation_reminders_for_your_mind_body_and_soul"
            android:textAlignment="textStart"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStepFive" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSelectAtLeastOneToContinue"
            style="@style/text_Style_roboto_regular_dark_purple_2_color"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/select_all_the_affirmation_subcategories_you_wish_to_receive_as_pictures_and_notifications_to_positively_align_your_thoughts_feelings_and_actions"
            android:textAlignment="textStart"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDiscoverAffirmationForYourMind" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:overScrollMode="never"
            android:id="@+id/rvCategory"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSelectAtLeastOneToContinue"
            app:layout_constraintBottom_toTopOf="@id/btnExplore"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_height="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnExplore"
            style="@style/blue_button_style"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/explore_in2bliss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>