<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.in2bliss.ui.activity.home.fragment.updateAffirmation.detail.DetailsVM" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.home.fragment.updateAffirmation.detail.DetailsFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/blue_button_style"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/continue_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTranscriptTitle"
        style="@style/editText_dark_purple_regular"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:background="@drawable/editext_dark_bg"
        android:drawableStart="@drawable/ic_add_affirmation_title"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/give_your_affirmation_a_title"
        android:inputType="text"
        android:textSize="@dimen/_12ssp"
        android:text="@={data.title}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTitleCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:src="@drawable/ic_cross_circle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etTranscriptTitle"
        app:layout_constraintEnd_toEndOf="@+id/etTranscriptTitle"
        app:layout_constraintTop_toTopOf="@+id/etTranscriptTitle" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTranscript"
        style="@style/editText_dark_purple_regular"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/editext_dark_bg"
        android:gravity="top|start"
        android:hint="@string/this_transcript_will_be_displayed_while_recording_your_voice"
        android:maxLength="1000"
        android:maxLines="30"
        android:text="@={data.transcript}"
        android:inputType="textMultiLine"
        android:padding="@dimen/_16ssp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTranscriptTitle"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvTranscriptCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_minus6sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/off_white"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTranscript"
        app:layout_constraintTop_toTopOf="@id/edtTranscript">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_Style_roboto_regular_dark_purple_color"
            android:background="@color/white"
            android:hint="@string/max_1000_words"
            android:text="@={data.transcriptCount}"
            android:paddingHorizontal="@dimen/_7sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_10ssp" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>

